--- a/template.css
+++ b/template.css
@@ -1,45 +1,1 @@
-body#layout {
-visibility: visible !important;
-}
-body#layout ul {
-/*display: none;*/
-}
-
-body#layout #content {
-width: 60%;
-    display: inline-block;
-    float: left;
-}
-
-body#layout .section h4 {
-margin: 2px 0 0 5px;
-}
-
-body#layout header {
-margin-top: 90px;
-}
-
-body#layout #sidebar {
-    padding: 0;
-    width: 40%;
-    float: right;
-}
-body#layout .wrapper {
-    width: 100%;
-    max-width: initial;
-    padding: 0;
-    margin: 0;
-    position: relative;
-}
-
-body#layout .header-content {
-    margin-top: auto;
-    overflow: visible;
-    height: auto;
-}
-body#layout .header-title {
-    float: left;
-    width: 50%;
-    max-height: initial;
-    margin: auto;
-}
+body#layout{visibility:visible!important}body#layout #content{width:60%;display:inline-block;float:left}body#layout .section h4{margin:2px 0 0 5px}body#layout header{margin-top:90px}body#layout #sidebar{padding:0;width:40%;float:right}body#layout .wrapper{width:100%;max-width:initial;padding:0;margin:0;position:relative}body#layout .header-content{margin-top:auto;overflow:visible;height:auto}body#layout .header-title{float:left;width:50%;max-height:initial;margin:auto}
